Bug 236039 - Column view keyboard navigation broken
Summary: Column view keyboard navigation broken
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: general (other bugs)
Version First Reported In: 16.12.2
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Peter Penz
URL:
Keywords:
: 248854 (view as bug list)
Depends on:
Blocks:
 
Reported: 2010-05-02 16:33 UTC by bisrcacuo
Modified: 2010-08-28 16:35 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description bisrcacuo 2010-05-02 16:33:43 UTC
Version:            (using KDE 4.4.2)
OS:                Linux
Installed from:    Ubuntu Packages

When using the keyboard to navigate in Dolphin's column view, the Enter key does not behave as expected.

Expected behaviour: use the arrow keys to select a directory in the current column, hit Enter to open the directory in the next column over.  Repeat the process to navigate through the directory tree.  Location of the mouse pointer should have no effect on navigation.

Actual behaviour: arrow keys work as expected, however Enter key only works to descend one directory level, after which the Enter key stops functioning.  The arrows key still work to highlight the next directory you wish to open, but hitting Enter has no effect.
You must move your mouse into the column that contains the directory you wish to open before Enter has any effect.
This must be done for ascending or descending tree navigation.

This functionality has worked on-and-off for 4.0 and 4.1, and I seem to remember it working properly for all of 4.2 and 4.3.
However as soon as the 4.4.x revisions started coming out I noticed the problem, and it has persisted ever since.
I thought this was a problem with the Kubuntu packages I was using, but when 10.4 came out and this problem was still there, I verified with someone in the #kde freenode channel who is using a freshly compiled KDE SVN trunk version that this behaviour is still present.
Comment 1 Alejandro Nova 2010-05-13 23:18:09 UTC
Confirmed (Fedora 13). It's definitely not a Kubuntu breakage.

The keyboard behaviour in Dolphin 4.4 is broken almost beyond repair. I'm filing another bug report related to group view, and there could be more. I think a keyboard navigating session with Dolphin could uncover dozens of bugs: clearly this has passed untested.
Comment 2 Thomas PIERSON 2010-05-18 12:39:42 UTC
Confirmed (Debian Squeeze).

The behavior is not only broken with the keyboard and also when you click on parent directory on previous column, the active column is not updated.
(In dolphin "Column View" Mode)
Comment 3 Peter Penz 2010-05-29 21:25:44 UTC
SVN commit 1132120 by ppenz:

Fix keyboard navigation issues in the column view

BUG: 236039

 M  +7 -5      dolphincolumnview.cpp  
 M  +28 -28    dolphincolumnviewcontainer.cpp  
 M  +0 -8      dolphincolumnviewcontainer.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1132120
Comment 4 Thomas PIERSON 2010-05-29 22:31:35 UTC
Thank you for your work!

Best regards,
Thomas PIERSON
Comment 5 Alejandro Nova 2010-05-30 04:30:52 UTC
Thanks!
Comment 6 FiNeX 2010-08-28 16:35:46 UTC
*** Bug 248854 has been marked as a duplicate of this bug. ***