Fix keyboard navigation issues in the column view

BUG: 236039

svn path=/trunk/KDE/kdebase/apps/; revision=1132120